# open-scoring

./: .gitignore  AUT-Scoring.ipynb  ExampleScoring.ipynb  README.md  file.py  pyproject.toml  reshape-participant-level.ipynb  scoring.py  setup.py
data/: AUT_Coding_ColoradoScores_v2.xlsx
notebooks/: AUT-Scoring.ipynb  ExampleScoring.ipynb  LLM-AUT-Scoring.ipynb  Term_Weighting_OCS_Example.ipynb  reshape-participant-level.ipynb
open_scoring/: __init__.py  file.py  prompt.py  scoring.py
open_scoring/assets/prompts/flexibility/uses/: 1.yaml
open_scoring/assets/prompts/originality/uses/: 1.yaml  llm_paper_splitlist.yaml  llm_paper_splitlist_beta.yaml
open_scoring/assets/prompts/summarizer/uses/: 1.yaml  2.yaml
open_scoring/assets/prompts/summarizer/uses_mixed/: 1.yaml
