[project]
name = "open-creativity-scoring"
version = "2.0.0"
description = "Library for scoring Alternate Uses Task."
readme = "README.md"
requires-python = "<3.13,>=3.10"
authors = [
    {name = "Peter Organisciak", email = "peter.organisciak@du.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Education",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.1",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic"
]
dependencies = [
    "numpy",
    "pandas",
    "spacy>=3.7.2",
    "gensim",
    "inflect",
    'scipy <=1.12.0',
    "openai>=1.6.1",
    "tqdm",
    "pyarrow"
]

[project.urls]
Homepage = "https://github.com/massivetexts/open-scoring"

[tool.setuptools]
packages = ["open_scoring"]

[tool.setuptools.package-data]
"*" = ["assets/*"]
